[gd_scene load_steps=3 format=3 uid="uid://dd1ujlt4rwflp"]

[ext_resource type="Script" path="res://pause.gd" id="1_l8hku"]
[ext_resource type="Theme" uid="uid://cwmybp78ekvwj" path="res://kenneyUI-blue.tres" id="3_jmmcj"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
script = ExtResource("1_l8hku")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -160.0
offset_right = 200.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 320.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Return" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme = ExtResource("3_jmmcj")
text = "return"

[node name="Restart" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
theme = ExtResource("3_jmmcj")
text = "restart"

[node name="Quit Button" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = ExtResource("3_jmmcj")
text = "Quit Game"

[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/VBoxContainer/Quit Button" to="." method="_on_quit_button_pressed"]
